fix navbar and hero spacing for mobil

--- a/styles/main.css
+++ b/styles/main.css
@@ -1011,8 +1011,8 @@ body {
   }
 
   .hamburger span {
-    width: 22px;
-    height: 1%;
+    width: 30px;
+    height: 1.4px;
     background: #333;
     border-radius: 2px;
     transition: 0.3s;
